# pfetch-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  all_logos.md  cliff.toml  custom_logos_example  print_all.sh
.github/workflows/: check.yml  release.yml
pfetch-extractor/: Cargo.toml  logos.sh
pfetch-extractor/src/: lib.rs
pfetch-logo-parser/: Cargo.toml  LICENSE
pfetch-logo-parser/src/: lib.rs
src/: lib.rs  main.rs
tools/: all_logos.txt  print_all.sh  render_all.sh  renderer.typ
