[workspace]
members = ["pfetch-extractor"]

[package]
name = "pfetch"
version = "2.7.0"
edition = "2021"
authors = ["Gobidev"]
description = "A rewrite of the pfetch system information tool"
repository = "https://github.com/Gobidev/pfetch-rs"
license = "MIT"
keywords = ["fetch", "pfetch", "cli", "system"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pfetch-extractor = { path = "./pfetch-extractor", version = "0.1.5" }
globset = "0.4.10"
dotenvy = "0.15.6"
glob = "0.3.1"
which = "4.4.0"
libmacchina = "7.1.0"
crossterm = "0.26.1"

[profile.release]
strip = true
