[workspace]
members = ["pfetch-extractor", "pfetch-logo-parser"]

[package]
name = "pfetch"
version = "2.8.1"
edition = "2021"
authors = ["Gobidev"]
description = "A rewrite of the pfetch system information tool"
repository = "https://github.com/Gobidev/pfetch-rs"
license = "MIT"
keywords = ["fetch", "pfetch", "cli", "system"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pfetch-logo-parser = { path = "./pfetch-logo-parser", version = "0.1.0" }
pfetch-extractor = { path = "./pfetch-extractor", version = "0.2.0" }
globset = "0.4.10"
dotenvy = "0.15.6"
glob = "0.3.1"
which = "4.4.0"
libmacchina = "7.2.1"
crossterm = "0.27.0"
os-release = "0.1.0"

[profile.release]
strip = true
