[workspace]
members = ["pfetch-extractor", "pfetch-logo-parser"]

[package]
name = "pfetch"
version = "2.10.0"
edition = "2021"
authors = ["Gobidev"]
description = "A rewrite of the pfetch system information tool"
repository = "https://github.com/Gobidev/pfetch-rs"
license = "MIT"
keywords = ["fetch", "pfetch", "cli", "system"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pfetch-logo-parser = { path = "./pfetch-logo-parser", version = "0.1.0" }
pfetch-extractor = { path = "./pfetch-extractor", version = "0.2.2" }
globset = "0.4.10"
dotenvy = "0.15.6"
glob = "0.3.1"
which = "6.0.2"
libmacchina = "7.3.0"
crossterm = "0.28.1"
os-release = "0.1.0"

[profile.release]
strip = true
