[package]
name = "pfetch-extractor"
version = "0.1.1"
edition = "2021"
authors = ["Gobidev"]
description = "A rust proc-macro to extract pfetch logos at compile time"
license = "MIT"
keywords = ["pfetch"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.50"
quote = "1.0.23"
regex = "1.7.1"
